# gremlin-orm

./: .envrc  Cargo.toml  README.md  compose.yml
evil-orm-macro/: Cargo.toml
evil-orm-macro/src/: lib.rs
examples/: lego.rs
gremlin-orm-macro/: Cargo.toml
gremlin-orm-macro/src/: delete.rs  fetch.rs  insert.rs  lib.rs  stream.rs  update.rs
resources/data/: schema.sql
src/: lib.rs
tests/: tests.rs
