[package]
name = "gremlin-orm"
description = "A lightweight, ORM for PostgreSQL, built on top of SQLx."
homepage = "https://github.com/nils-degroot/gremlin-orm"
repository = "https://github.com/nils-degroot/gremlin-orm"
readme = "README.md"
authors = ["Nils de Groot <nils@peeko.nl>"]
version = "0.5.0"
edition = "2024"
license-file = "LICENSE"
keywords = ["database"]
categories = ["database"]

[workspace]
resolver = "2"
members = [
	".",
	"./gremlin-orm-macro/"
]

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
futures = "0.3.31"
gremlin-orm-macro = "0.5.0"
# gremlin-orm-macro = { path = "./gremlin-orm-macro/" }

[dev-dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.46.1", features = ["full"] }
assert2 = "0.3.16"
serde = "1.0.219"
chrono = "0.4.41"
