[package]
name = "gremlin-orm"
description = "A lightweight, ORM for PostgreSQL, built on top of SQLx."
homepage = "https://github.com/nils-degroot/gremlin-orm"
repository = "https://github.com/nils-degroot/gremlin-orm"
readme = "README.md"
license-file = "LICENSE"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[workspace]
resolver = "3"
members = [
	".",
	"./gremlin-orm-macro/"
]

[workspace.package]
version = "0.5.0"
edition = "2024"
keywords = ["database"]
categories = ["database"]
authors = ["Nils de Groot <nils@peeko.nl>"]

[dependencies]
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio"] }
futures = "0.3.31"
gremlin-orm-macro = { version = "0.5.0", path = "./gremlin-orm-macro" }

[dev-dependencies]
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.46.1", features = ["full"] }
assert2 = "0.3.16"
serde = "1.0.219"
chrono = "0.4.41"
